--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -28,4 +28,9 @@
     <RepositoryTags></RepositoryTags>
   </PropertyGroup>
 
+  <ItemGroup>
+    <!-- Versioning -->
+    <PackageReference Include="Nerdbank.GitVersioning" Version="3.6.133" PrivateAssets="All" />
+  </ItemGroup>
+
 </Project>
