--- a/src/TabKeeper.UI.Wasm/TabKeeper.UI.Wasm.csproj
+++ b/src/TabKeeper.UI.Wasm/TabKeeper.UI.Wasm.csproj
@@ -1,26 +1,37 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>TabKeeper</RootNamespace>
-    <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
+    <!-- <PublishTrimmed>true</PublishTrimmed> -->
+    <!-- <TrimMode>partial</TrimMode> -->
+    <!--<ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>-->
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ignis.Components.HeadlessUI" Version="1.1.0" />
-    <PackageReference Include="Ignis.Components.HeroIcons" Version="1.1.0" />
-    <PackageReference Include="Ignis.Components.WebAssembly" Version="1.1.0" />
-    <PackageReference Include="Ignis.Utils" Version="1.1.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.0" PrivateAssets="all" />
+    <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
+    <PackageReference Include="Flurl.Http" Version="4.0.2" />
+    <PackageReference Include="Ignis.Components.HeadlessUI" Version="1.3.0" />
+    <PackageReference Include="Ignis.Components.Reactivity" Version="1.3.0" />
+    <PackageReference Include="Ignis.Components.WebAssembly" Version="1.3.0" />
+    <PackageReference Include="Ignis.Utils" Version="1.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.4" PrivateAssets="all" />
+    <PackageReference Include="P41.FontAwesome" Version="6.5.2" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src-modules\Core\src\Core.Blazor\Core.Blazor.csproj" />
     <ProjectReference Include="..\TabKeeper.UI\TabKeeper.UI.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\css\" />
+    <None Remove="package.json;tailwind.extension.json" />
   </ItemGroup>
 
 </Project>
