--- a/src/TabKeeper.UI.Wasm/package.json
+++ b/src/TabKeeper.UI.Wasm/package.json
@@ -1,6 +1,10 @@
 {
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
+    "@tailwindcss/typography": "^0.5.12",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
     "postcss-import": "^16.1.0"
   }
 }
