--- a/src/TabKeeper.UI.Wasm/TabKeeper.UI.Wasm.csproj
+++ b/src/TabKeeper.UI.Wasm/TabKeeper.UI.Wasm.csproj
@@ -9,14 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Annular.Translate" Version="0.1.0" />
     <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
     <PackageReference Include="Flurl.Http" Version="4.0.2" />
-    <PackageReference Include="Ignis.Components.HeadlessUI" Version="1.3.0" />
-    <PackageReference Include="Ignis.Components.Reactivity" Version="1.3.0" />
-    <PackageReference Include="Ignis.Components.WebAssembly" Version="1.3.0" />
-    <PackageReference Include="Ignis.Utils" Version="1.3.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.4" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.4" PrivateAssets="all" />
+    <PackageReference Include="Ignis.Components.HeadlessUI" Version="1.4.0" />
+    <PackageReference Include="Ignis.Components.Reactivity" Version="1.4.0" />
+    <PackageReference Include="Ignis.Components.WebAssembly" Version="1.4.0" />
+    <PackageReference Include="Ignis.Utils" Version="1.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.6" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.6" PrivateAssets="all" />
+    <PackageReference Include="OneOf" Version="3.0.271" />
     <PackageReference Include="P41.FontAwesome" Version="6.5.2" />
   </ItemGroup>
 
@@ -27,11 +29,6 @@
 
   <ItemGroup>
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="wwwroot\css\" />
-    <None Remove="package.json;tailwind.extension.json" />
   </ItemGroup>
 
 </Project>
