--- a/src/TabKeeper.UI/TabKeeper.UI.csproj
+++ b/src/TabKeeper.UI/TabKeeper.UI.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Annular.Translate" Version="0.1.1-dev" />
     <PackageReference Include="DynamicData" Version="8.4.1" />
   </ItemGroup>
 
