--- a/src/TabKeeper.UI.Wasm/TabKeeper.UI.Wasm.csproj
+++ b/src/TabKeeper.UI.Wasm/TabKeeper.UI.Wasm.csproj
@@ -9,16 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
-    <PackageReference Include="Flurl.Http" Version="4.0.2" />
-    <PackageReference Include="Ignis.Components.HeadlessUI" Version="1.4.0" />
-    <PackageReference Include="Ignis.Components.Reactivity" Version="1.4.0" />
-    <PackageReference Include="Ignis.Components.WebAssembly" Version="1.4.0" />
-    <PackageReference Include="Ignis.Utils" Version="1.4.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.6" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.6" PrivateAssets="all" />
-    <PackageReference Include="OneOf" Version="3.0.271" />
-    <PackageReference Include="P41.FontAwesome" Version="6.5.2" />
+    <PackageReference Include="Blazored.LocalStorage" />
+    <PackageReference Include="Flurl.Http" />
+    <PackageReference Include="Ignis.Components.HeadlessUI" />
+    <PackageReference Include="Ignis.Components.Reactivity" />
+    <PackageReference Include="Ignis.Components.WebAssembly" />
+    <PackageReference Include="Ignis.Utils" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" PrivateAssets="all" />
+    <PackageReference Include="OneOf" />
+    <PackageReference Include="P41.FontAwesome" />
   </ItemGroup>
 
   <ItemGroup>
