--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -9,7 +9,11 @@
     <NoWarn>$(NoWarn);CS8509;IDE0039;IDE0130;IDE0290;IDE0060;RZ10012;IDE0052;BL0007;</NoWarn>
     <WarningsAsErrors>$(WarningsAsErrors);RZ2012;</WarningsAsErrors>
 
-    <ArtifactsPath>$(MSBuildThisFileDirectory)artifacts\$([MSBuild]::MakeRelative($(MSBuildThisFileDirectory),$(MSBuildProjectDirectory)).Replace($(MSBuildProjectName), ''))</ArtifactsPath>
+    <ArtifactsPath>$([System.IO.Path]::Combine(
+      $(MSBuildThisFileDirectory),
+      "artifacts",
+      $([MSBuild]::MakeRelative($(MSBuildThisFileDirectory),$(MSBuildProjectDirectory)).Replace("$(MSBuildProjectName)", '').TrimEnd('/'))
+    ))</ArtifactsPath>
 
     <UseArtifactsOutput>true</UseArtifactsOutput>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
