--- a/src/TabKeeper.UI.Wasm/package.json
+++ b/src/TabKeeper.UI.Wasm/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "tabkeeper",
+  "author": "Panagiotis Athanasiou",
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
