--- a/src/TabKeeper.UI.Wasm/Properties/launchSettings.json
+++ b/src/TabKeeper.UI.Wasm/Properties/launchSettings.json
@@ -1,14 +1,11 @@
 {
-  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "run": {
+    "TabKeeper.UI.Wasm": {
       "commandName": "Project",
-      "launchBrowser": false,
-      "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-      "applicationUrl": "https://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001"
     }
   }
 }
