--- a/.github/workflows/_ci.yaml
+++ b/.github/workflows/_ci.yaml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v4.0.0
-        with: { dotnet-version: 8.0.x }
+        with: { global-json-file: ./global.json }
 
       - name: Setup wasm-tools
         run: dotnet workload install wasm-tools
