--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -7,41 +7,35 @@
   <!-- Packagges -->
   <ItemGroup>
     <PackageVersion Include="Annular.Translate" Version="0.1.7-dev" />
-    <PackageVersion Include="BlazorEssentials.IndexedDb" Version="3.0.0-CI-20240809-035959" />
     <PackageVersion Include="Blazored.LocalStorage" Version="4.5.0" />
-    <PackageVersion Include="DynamicData" Version="9.0.4" />
-    <PackageVersion Include="Flurl.Http" Version="4.0.2" />
+    <PackageVersion Include="DynamicData" Version="9.1.2" />
+    <PackageVersion Include="Flurl" Version="4.0.0" />
     <PackageVersion Include="Ignis.Components.HeadlessUI" Version="1.4.0" />
     <PackageVersion Include="Ignis.Components.Reactivity" Version="1.4.0" />
     <PackageVersion Include="Ignis.Components.WebAssembly" Version="1.4.0" />
     <PackageVersion Include="Ignis.Utils" Version="1.4.0" />
-    <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.10" />
-    <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.10" />
-    <PackageVersion Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
-    <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
-    <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
-    <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+    <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.2" />
+    <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.2" />
     <PackageVersion Include="Microsoft.Extensions.Options" Version="8.0.2" />
     <PackageVersion Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
     <PackageVersion Include="OneOf" Version="3.0.271" />
-    <PackageVersion Include="P41.FontAwesome" Version="6.5.2" />
+    <PackageVersion Include="P41.FontAwesome" Version="6.6.0.2" />
     <PackageVersion Include="System.Reactive" Version="6.0.1" />
-    <PackageVersion Include="System.Text.Json" Version="8.0.4" />
   </ItemGroup>
   <!---->
   <!-- Testing -->
   <ItemGroup>
-    <PackageVersion Include="FluentAssertions" Version="6.12.2" />
-    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
-    <PackageVersion Include="coverlet.collector" Version="6.0.2" />
-    <PackageVersion Include="xunit" Version="2.9.2" />
-    <PackageVersion Include="xunit.runner.visualstudio" Version="2.8.2" />
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+    <PackageVersion Include="Microsoft.Testing.Extensions.CodeCoverage" Version="17.13.1" />
+    <PackageVersion Include="TUnit" Version="0.10.28" />
+    <PackageVersion Include="Verify.SourceGenerators" Version="2.5.0" />
+    <PackageVersion Include="Verify.TUnit" Version="28.10.1" />
   </ItemGroup>
   <!---->
   <!-- Versioning & SourceLink -->
   <ItemGroup>
     <GlobalPackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" />
-    <GlobalPackageReference Include="Nerdbank.GitVersioning" Version="3.6.146" />
+    <GlobalPackageReference Include="GitVersion.MSBuild" Version="6.1.0" />
   </ItemGroup>
   <!---->
 </Project>
