--- a/src/TabKeeper.UI.Wasm/TabKeeper.UI.Wasm.csproj
+++ b/src/TabKeeper.UI.Wasm/TabKeeper.UI.Wasm.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <RootNamespace>TabKeeper</RootNamespace>
     <!-- <PublishTrimmed>true</PublishTrimmed> -->
     <!-- <TrimMode>partial</TrimMode> -->
@@ -12,15 +12,13 @@
 
   <ItemGroup>
     <PackageReference Include="Blazored.LocalStorage" />
-    <PackageReference Include="BlazorEssentials.IndexedDb" />
-    <PackageReference Include="Flurl.Http" />
+    <PackageReference Include="Flurl" />
     <PackageReference Include="Ignis.Components.HeadlessUI" />
     <PackageReference Include="Ignis.Components.Reactivity" />
     <PackageReference Include="Ignis.Components.WebAssembly" />
     <PackageReference Include="Ignis.Utils" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" PrivateAssets="all" />
-    <PackageReference Include="OneOf" />
     <PackageReference Include="P41.FontAwesome" />
   </ItemGroup>
 
