--- a/src/TabKeeper.UI.Wasm/package.json
+++ b/src/TabKeeper.UI.Wasm/package.json
@@ -8,6 +8,7 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "postcss-import": "^16.1.0",
-    "tailwind-material-colors": "3.0.2"
+    "tailwind-material-colors": "3.0.2",
+    "tailwindcss": "^3.4.17"
   }
 }
