--- a/.github/workflows/_.yaml
+++ b/.github/workflows/_.yaml
@@ -5,6 +5,9 @@ on:
     inputs:
       publish: { type: boolean, default: false, description: Publish application }
       environment: { type: string, default: dev, description: Choose publish environment <dev|staging|prod> }
+    secrets:
+      CLOUDFLARE_API_TOKEN:
+      CLOUDFLARE_ACCOUNT_ID:
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -26,10 +29,8 @@ jobs:
       uses: actions/setup-dotnet@v4
       with: { dotnet-version: "${{ steps.dotnet-version.outputs.version }}" }
 
-    - name: Setup tools
-      run: |
-        dotnet workload install wasm-tools
-        npm install -g tailwindcss
+    - name: Install wasm-tools
+      run: dotnet workload install wasm-tools
 
     - name: Restore
       working-directory: src/TabKeeper.UI.Wasm
@@ -42,17 +43,17 @@ jobs:
       run: dotnet build -c Release --no-restore
 
     - name: Publish
-      if: ${{ inputs.publish }}
+      if: inputs.publish
       working-directory: src/TabKeeper.UI.Wasm
       shell: pwsh
       run: |
         .\css.ps1 -publish
-        dotnet publish --no-restore --no-build
+        dotnet publish
 
-    - name: Publish to Cloudflare Pages
-      if: ${{ inputs.publish }}
-      uses: cloudflare/wrangler-action@v3
-      with:
-        apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-        accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-        command: pages deploy artifacts/src/publish/TabKeeper.UI.Wasm/release/wwwroot --project-name=tab-keeper --branch ${{ inputs.environment }}
+    - name: Push to Cloudflare Pages
+      if: inputs.publish
+      working-directory: artifacts/src/publish/TabKeeper.UI.Wasm/release
+      env:
+        CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+        CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+      run: npx wrangler pages deploy wwwroot --project-name=tab-keeper --branch ${{ inputs.environment }}
