Move to Noctilocus from Annular.Translate

--- a/src/TabKeeper.UI.Wasm/TabKeeper.UI.Wasm.csproj
+++ b/src/TabKeeper.UI.Wasm/TabKeeper.UI.Wasm.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Ignis.Utils" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" PrivateAssets="all" />
+    <PackageReference Include="Noctilocus" />
     <PackageReference Include="P41.FontAwesome" />
   </ItemGroup>
 
