--- a/src/TabKeeper.UI.Wasm/package.json
+++ b/src/TabKeeper.UI.Wasm/package.json
@@ -2,13 +2,12 @@
   "name": "tabkeeper",
   "author": "Panagiotis Athanasiou",
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
-    "@tailwindcss/typography": "^0.5.12",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "postcss-import": "^16.1.0",
-    "tailwind-material-colors": "3.0.2",
-    "tailwindcss": "^3.4.17"
+    "@tailwindcss/cli": "^4.0.17",
+    "tailwindcss": "^4.0.17"
+  },
+  "scripts": {
+    "css": "npx @tailwindcss/cli -i ./assets/app.scss -o ./wwwroot/css/app.min.css",
+    "css:watch": "npx @tailwindcss/cli -i ./assets/app.scss -o ./wwwroot/css/app.min.css -w",
+    "css:publish": "npx @tailwindcss/cli -i ./assets/app.scss -o ./wwwroot/css/app.min.css -m"
   }
 }
