--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -6,18 +6,16 @@
   <!---->
   <!-- Packagges -->
   <ItemGroup>
-    <PackageVersion Include="Annular.Translate" Version="0.1.7-dev" />
     <PackageVersion Include="Blazored.LocalStorage" Version="4.5.0" />
     <PackageVersion Include="DynamicData" Version="9.1.2" />
     <PackageVersion Include="Flurl" Version="4.0.0" />
     <PackageVersion Include="Ignis.Components.HeadlessUI" Version="1.4.0" />
-    <PackageVersion Include="Ignis.Components.Reactivity" Version="1.4.0" />
     <PackageVersion Include="Ignis.Components.WebAssembly" Version="1.4.0" />
-    <PackageVersion Include="Ignis.Utils" Version="1.4.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.2" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.2" />
     <PackageVersion Include="Microsoft.Extensions.Options" Version="8.0.2" />
     <PackageVersion Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
+    <PackageVersion Include="Noctilocus" Version="1.0.0-beta.5" />
     <PackageVersion Include="OneOf" Version="3.0.271" />
     <PackageVersion Include="P41.FontAwesome" Version="6.6.0.2" />
     <PackageVersion Include="System.Reactive" Version="6.0.1" />
