--- a/src/TabKeeper.UI/TabKeeper.UI.csproj
+++ b/src/TabKeeper.UI/TabKeeper.UI.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="DynamicData" />
+    <PackageReference Include="ObservableCollections.R3" />
   </ItemGroup>
 
   <ItemGroup>
